Fixed scrollbar jerking when tooltip appears

--- a/app/styles/overrides/_overrides.scss
+++ b/app/styles/overrides/_overrides.scss
@@ -141,6 +141,12 @@ ul {
   }
 }
 
+/* Tooltip overrides for functionality */
+.tooltip-inner {
+  white-space:pre-wrap;
+  min-width: 200px;
+}
+
 @import "tabs";
 @import "forms";
 @import "tags-overrides";
